--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ html lang="en">
   <section class="about" id="about">
     <div class="container">
       <h2>About Me</h2>
-      <p>I'm a passionate software developer with experience in back-office operations and a strong interest in AI, web development, and clean design. I love building user-friendly systems and engaging interfaces. When I’m not coding, I’m probably working on a personal project, playing guitar, or watching *Avatar: The Last Airbender*.</p>
+      <p>I'm a passionate software developer with experience in back-office operations and a strong interest in AI, web development, and clean design. I love building user-friendly systems and engaging interfaces. When I’m not coding, I’m probably working on a personal project, playing guitar, playing games or watching football.</p>
     </div>
   </section>
 
